correct procedimentos texts

--- a/index.html
+++ b/index.html
@@ -263,14 +263,14 @@
                   <h3>Lifting Facial</h3>
                   <div class="faq-content">
                     <p class="fst-italic">Indicado para pacientes que apresentam sinais avançados de
-                      envelhecimento.</p>
+                      envelhecimento:</p>
 
                     <ul>
                       <li>Flacidez de pele na face, com aspecto de derretimento;</li>
                       <li>Bigode chinês profundo;</li>
                       <li>Presença de jowl, conhecido como efeito bulldog;</li>
                       <li>Excedente importante de pele no pescoço, podendo
-                        também apresentar gordura excessiva;</li>
+                        também apresentar gordura excessiva.</li>
                     </ul>
                     <p>Esse procedimento busca restabelecer o contorno original da
                       face, reposicionar os tecidos, eliminar rugas e excesso de pele.</p>
@@ -617,10 +617,16 @@
               </div>
               <div class="modal-body">
                 <h5>Facial</h5>
-                <p>Os preenchimentos usados são a base de ácido hialurônico, substância que é produzida pelo próprio
-                  corpo, não havendo risco de rejeição. O objetivo é restaurar o volume que foi perdido com o
-                  envelhecimento, sustentar a face com aplicações em pontos estratégicos, embelezar algumas áreas,
-                  melhorar o contorno e harmonia da face.</p>
+                <p>Os preenchimentos usados são a base de ácido hialurônico,
+                  substância que é produzida pelo próprio corpo, não havendo
+                  risco de rejeição. O objetivo é restaurar o volume que foi
+                  perdido com o envelhecimento, sustentar a face com
+                  aplicações em pontos estratégicos, embelezar algumas áreas,
+                  melhorar o contorno e harmonia da face. Não existe número
+                  estabelecido de seringas e muito menos técnicas padronizadas.
+                  O paciente é avaliado, levando-se em conta suas
+                  características e queixas e a partir disso, é feito um
+                  planejamento individualizado.</p>
                 <h5>Corporal</h5>
                 <p>Além dos preenchedores usados na face, existe também preenchedor a base de ácido hialurônico para uso
                   corporal. É possível melhorar o aspecto dos glúteos de forma segura, volumizando, empinando e
@@ -640,8 +646,12 @@
                   aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <p>Existem hoje diversos tipos e marcas de fios de sustentação, geralmente eles são absorvíveis e por
-                  serem mais duráveis, melhorando o contorno da face, do pescoço, dos braços e glúteos.</p>
+                <p>Existem hoje diversos tipos e modelos de fios. Os fios
+                  absorvíveis são nossa preferência por serem bicompatíveis.
+                  Destacam-se os fios de PDO (polidioxanona) ou PLLA (ácido
+                  polilático) que promovem estímulo de colágeno. Alguns deles
+                  promovem inicialmente a suspensão dos tecidos caídos e com
+                  a produção de colágeno, melhoram a sustentação da pele.</p>
               </div>
             </div>
           </div>
@@ -661,6 +671,28 @@
                 <p>Ultraformer é um ultrassom micro e macrofocado, usado em tratamentos faciais e
                   corporais. Ele atua em profundidades diferentes, estimulando a produção de colágeno, promovendo efeito
                   lifting e destruindo células gordurosas.</p>
+                <h5>Quais as indicações?</h5>
+                <p>
+                  O ultraformer está indicado para tratamento dos sinais do
+                  envelhecimento, assim como embelezamento, podendo
+                  promover:
+                <ul>
+                  <li>Efeito lifting;</li>
+                  <li>Melhora de sulcos como bigode chinês;</li>
+                  <li>Melhora do contorno da face;</li>
+                  <li>Melhora do jowl, conhecido como efeito bulldog;</li>
+                  <li>Efeito bichectomia;</li>
+                  <li>Melhora da firmeza da pele;</li>
+                  <li>Arqueamento das sobrancelhas, com efeito fox eyes;</li>
+                  <li>Redução da papada.</li>
+                </ul>
+                </p>
+                <p>
+                  No corpo, podemos utilizá-lo para tratar flacidez de pele no
+                  abdome, aspecto de umbigo triste, interno de coxas, por
+                  exemplo. Além de ser útil em pequenas áreas com gordura
+                  localizada.
+                </p>
               </div>
             </div>
           </div>
