correct beside-toggle-btn

--- a/index.html
+++ b/index.html
@@ -63,12 +63,10 @@
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </nav>
-          <div class="d-flex justify-content-center mt-3">
-            <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
-              <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
-              <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i>
-            </a>
-          </div>
+          <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto beside-toggle-btn">
+            <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+            <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i>
+          </a>
         </div>
 
       </div>
