change non icons

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="bioestimuladores-tab" role="tab" aria-controls="bioestimuladores"
                 aria-selected="true" data-bs-toggle="modal" data-bs-target="#bioestimuladoresModal">
-                <h4 class="icon-text">Bioestimuladores <i class="bi bi-arrow-right-circle animated-icon"></i>
+                <h4 class="icon-text">Bioestimuladores <i class="bi bi-plus-circle-dotted animated-icon"></i>
                 </h4>
               </a>
             </li><!-- End tab nav item -->
@@ -514,7 +514,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="botox-tab" role="tab" aria-controls="botox" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#botoxModal">
-                <h4 class="icon-text">Botox <i class="bi bi-arrow-right-circle animated-icon"></i>
+                <h4 class="icon-text">Botox <i class="bi bi-plus-circle-dotted animated-icon"></i>
                 </h4>
               </a>
             </li><!-- End tab nav item -->
@@ -522,7 +522,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="preenchimento-tab" role="tab" aria-controls="preenchimento" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#preenchimentoModal">
-                <h4 class="icon-text">Preenchimento <i class="bi bi-arrow-right-circle animated-icon"></i>
+                <h4 class="icon-text">Preenchimento <i class="bi bi-plus-circle-dotted animated-icon"></i>
                 </h4>
               </a>
             </li><!-- End tab nav item -->
@@ -530,7 +530,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="fios-tab" role="tab" aria-controls="fios" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#fiosModal">
-                <h4 class="icon-text">Fios <i class="bi bi-arrow-right-circle animated-icon"></i>
+                <h4 class="icon-text">Fios <i class="bi bi-plus-circle-dotted animated-icon"></i>
                 </h4>
               </a>
             </li><!-- End tab nav item -->
@@ -538,7 +538,7 @@
             <li class="nav-item col-lg-2" role="presentation">
               <a class="nav-link" id="ultraformer-tab" role="tab" aria-controls="ultraformer" aria-selected="false"
                 data-bs-toggle="modal" data-bs-target="#ultraformerModal">
-                <h4 class="icon-text">Ultraformer <i class="bi bi-arrow-right-circle animated-icon"></i>
+                <h4 class="icon-text">Ultraformer <i class="bi bi-plus-circle-dotted animated-icon"></i>
                 </h4>
               </a>
             </li><!-- End tab nav item -->
