--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="bioestimuladoresModalLabel">Bioestimuladores de colágeno</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                <button type="button" class="btn-close btn-close-accent" data-bs-dismiss="modal"
                   aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -585,7 +585,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="botoxModalLabel">Botox</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                <button type="button" class="btn-close btn-close-accent" data-bs-dismiss="modal"
                   aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -610,7 +610,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="preenchimentoModalLabel">Preenchimento</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                <button type="button" class="btn-close btn-close-accent" data-bs-dismiss="modal"
                   aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -640,7 +640,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="fiosModalLabel">Fios</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                <button type="button" class="btn-close btn-close-accent" data-bs-dismiss="modal"
                   aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -662,7 +662,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="ultraformerModalLabel">Ultraformer</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                <button type="button" class="btn-close btn-close-accent" data-bs-dismiss="modal"
                   aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -787,11 +787,11 @@
           <div class="credits">
             Desenvolvido por
             <a href="https://www.cassiaqueirozcodelab.com.br/"
-              style="color: rgba(255, 255, 255, 0.6); border-bottom: 1px solid rgba(255, 255, 255, 0.3);"
+              style="color: rgba(5, 5, 5, 0.5); border-bottom: 1px solid rgba(5, 5, 5, 0.1);"
               onmouseover="this.style.borderBottom='1px solid transparent';"
-              onmouseout="this.style.borderBottom='1px solid rgba(255, 255, 255, 0.3)';"
+              onmouseout="this.style.borderBottom='1px solid rgba(5, 5, 5, 0.1)';"
               onfocus="this.style.borderBottom='1px solid transparent';"
-              onblur="this.style.borderBottom='1px solid rgba(255, 255, 255, 0.3)';">
+              onblur="this.style.borderBottom='1px solid rgba(5, 5, 5, 0.1)';">
               cassiaqueirozcodelab</a>.
           </div>
 
