Update main version

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   </head>
 
   <body class="index-page">
-
     <header id="header" class="header sticky-top">
+
 
       <div class="branding d-flex align-items-cente">
 
@@ -62,7 +62,11 @@
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </nav>
-
+          <a href="https://api.whatsapp.com/send?phone=5521995088934"
+            class="appointment-btn scrollto beside-toggle-btn">
+            <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+            <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i>
+          </a>
         </div>
 
       </div>
@@ -678,7 +682,7 @@
         </div>
 
       </section><!-- /Noncirurgicos Section -->
-      
+
       <!-- Endereco Section -->
       <section id="endereco" class="endereco section">
 
